--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,17 @@
     url(./assets/cursor/plus1-svgrepo-com.svg) 32 32,
     pointer;
 }
+
+
+.info{
+  /* width: 100px;
+  height: 80vh;
+  position: absolute;
+  left: 0px;  
+  background-color: red; */
+  z-index: 10000;
+}
+
+.hideMe{
+  left: -100px;
+}
