--- a/src/index.css
+++ b/src/index.css
@@ -25,8 +25,11 @@
   left: 0px;  
   background-color: red; */
   z-index: 10000;
+  left: 50px;
+  transition: left 0.5s;
 }
 
 .hideMe{
-  left: -100px;
+  left: -300px;
+  transition: left 0.5s;
 }
