--- a/src/index.css
+++ b/src/index.css
@@ -12,30 +12,39 @@
 }
 
 body {
-  background-color: rgb(25,25,25);
+  background-color: rgb(25, 25, 25);
   color: #f4f4f4;
 }
 
-
-.canvas-element > *{
+.canvas-element > * {
   cursor:
     url(./assets/cursor/plus1-svgrepo-com.svg) 32 32,
     pointer;
 }
 
-
-.info{
-  /* width: 100px;
-  height: 80vh;
-  position: absolute;
-  left: 0px;  
-  background-color: red; */
+.info {
   z-index: 5;
   left: 50px;
   transition: left 0.5s;
 }
+.animate-mobile-menu-in {
+  animation: mobile-menu 1s cubic-bezier(0.41, -0.67, 0.66, 1.73) 0s 1 forwards;
+}
+.animate-mobile-menu-out {
+  animation: mobile-menu 2s reverse cubic-bezier(0.41, -0.67, 0.66, 1.73) 0s 1
+    forwards;
+}
 
-.hideMe{
+@keyframes mobile-menu {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.hideMe {
   left: -300px;
   transition: left 0.5s;
 }
