--- a/src/index.css
+++ b/src/index.css
@@ -48,3 +48,15 @@ body {
   left: -300px;
   transition: left 0.5s;
 }
+@media screen and (max-width:600px) {
+  * {
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+  }
+  
+}
