--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
 }
 
 body {
-  background-color: rgb(25, 25, 25);
+  background-color: rgb(35, 35, 35);
   color: #f4f4f4;
 }
 
@@ -48,9 +48,9 @@ body {
   left: -300px;
   transition: left 0.5s;
 }
-@media screen and (max-width:600px) {
+@media screen and (max-width: 600px) {
   * {
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     -webkit-tap-highlight-color: transparent;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -58,5 +58,4 @@ body {
     -moz-user-select: none;
     -ms-user-select: none;
   }
-  
 }
