--- a/src/index.css
+++ b/src/index.css
@@ -28,18 +28,18 @@ body {
   transition: left 0.5s;
 }
 .animate-mobile-menu-in {
-  animation: animation-opacity-in 1s cubic-bezier(0.41, -0.67, 0.66, 1.73) 0s 1 forwards;
+  animation: animation-opacity-in 1s cubic-bezier(0.41, -0.67, 0.66, 1.73) 0s 1
+    forwards;
 }
 .animate-mobile-menu-out {
-  animation: animation-opacity-in 2s reverse cubic-bezier(0.41, -0.67, 0.66, 1.73) 0s 1
-    forwards;
+  animation: animation-opacity-in 2s reverse
+    cubic-bezier(0.41, -0.67, 0.66, 1.73) 0s 1 forwards;
 }
 .animate-desktop-menu-in {
   animation: animation-opacity-in-10p 1s ease 0s 1 forwards;
 }
 .animate-desktop-menu-out {
-  animation: animation-opacity-in-10p 2s reverse ease 0s 1
-    forwards;
+  animation: animation-opacity-in-10p 2s reverse ease 0s 1 forwards;
 }
 
 @keyframes animation-opacity-in {
